Update movie dto